--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "axios": "^0.26.1",
+    "date-fns": "^2.28.0",
     "framer-motion": "^5",
     "next": "12.0.9",
     "react": "17.0.2",
