--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/icon": "^2.0.5",
     "@chakra-ui/react": "^1.8.1",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@ethersproject/units": "^5.5.0",
+    "@metamask/jazzicon": "^2.0.0",
+    "@usedapp/core": "^0.7.2",
     "axios": "^0.26.1",
     "date-fns": "^2.28.0",
     "framer-motion": "^5",
